--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/18/n13031727.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2008/08/808042334311898-320x200.jpg"><p align="center">【独家】内部文件泄中共如何变异宗教</p></a>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053910.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054158-GettyImages-1233512988-320x200.jpg"><p align="center">罕见热浪袭美国西北部和东部 电费或猛涨</p></a>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053910.md#1" title="罕见热浪袭美国西北部和东部 电费或猛涨""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054158-GettyImages-1233512988-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/18/n13031727.md#1" title="【独家】内部文件泄中共如何变异宗教""><img width="73" src="https://i.epochtimes.com/assets/uploads/2008/08/808042334311898-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053872.md#1" title="香港政情大风暴 时评人纷封口及关频道""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053874-DSC_7043-01-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053664.md#1" title="美众院调查 揭中共如何操纵美企为其服务""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13015095-gettyimages-2062513--320x200.jpeg">&nbsp;</a>
@@ -11,51 +12,51 @@
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052662.md#1" title="【疫情6.28】英国陆军司令染疫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052678-GettyImages-1228053562-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/24/n13045323.md#1" title="病毒源头2可能 专家：找到源头关乎所有人安危""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052282-GettyImages2-1889380-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13051943.md#1" title="了解真正中国文化 神韵演出感动名流精英""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052179-2106271913031973-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13051694.md#1" title="拜登下令 美军精准空袭伊朗支持民兵设施""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13051758-000_9DC7KN-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ixmwwk3204.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054117.md#1">【远见快评】中共自曝病毒信息 中俄续约藏玄机</a><br>
-:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053910.md#1">罕见热浪袭美国西北部和东部 电费或猛涨</a><br>
-:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054147.md#1">避免阿拉斯加冲突重演 王毅将视讯参加G20会议</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053923.md#1">拜登发动空袭后 亲伊朗民兵向美军发射火箭弹</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053898.md#1">拜普会后 习近平连线普京宣布中俄条约延期</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/18/n13031727.md#1">【独家】内部文件泄中共如何变异宗教</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054275.md#1">亚利桑那州审计结束 预计8月前后公布结果</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054125.md#1">【时事纵横】习续约拉拢普京 党庆秀神秘提前?</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054093.md#1">【役情最前线】李家超代理特首当天 黑暴雨示警</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054117.md#1">【远见快评】中共自曝病毒信息 中俄续约藏玄机</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053910.md#1">罕见热浪袭美国西北部和东部 电费或猛涨</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054147.md#1">避免阿拉斯加冲突重演 王毅将视讯参加G20会议</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050237.md#1">白银马拉松致21死 官方报告出炉 细节惊人</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/26/n13049347.md#1">【马克时空】中美驱逐舰对比 神盾系统成标配</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13051291.md#1">中共打压致虚拟货币全线崩溃 挖矿机贱卖</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/26/n13049869.md#1">【横河观点】百年“喜”事丧办 中共身份危机</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/25/n13046173.md#1">习近平最新意识形态战：“战狼”披羊皮</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13051290.md#1">退出凤凰卫视 刘长乐抛售洛杉矶豪宅</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/26/n13049352.md#1">外媒揭中共专政三手段：没有一个党能万岁</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13051416.md#1">中共官方预计将再上调油价 半年内第九涨</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/26/n13049823.md#1">中共联俄反美？网民转普京心声：坐山观虎斗</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050189.md#1">【翻墙必看】前中共公安爆死囚被开膛破肚</a><br>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050646.md#1">英美澳对疫情三项新发现 条条反击中共甩锅</a><br>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13049986.md#1">全球缺芯片 中国市场现大量假芯片</a><br>
 <br><p align="center"><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/11/n13015910.md#1">【思想领袖】图尔克：中共种族灭绝必须制止</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/16/n13024693.md#1">【内幕】与美争霸 中共研究反美长臂管辖</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050942.md#1">【名家专栏】就CAVPAC与蓬佩奥的谈话</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050481.md#1">家属揭河南武馆火灾内情 被当局逼签协议</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/1/n12992285.md#1">【思想领袖】阿马里：自由的堕落和时代危机</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050458.md#1">知情者爆一带一路项目 大陆劳工命如草芥</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050253.md#1">钟原：钟南山欲唱赞歌却泄漏实情</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/26/n13049818.md#1">专访戴维斯：如奥威尔式 美科技平台审查内幕</a><br>
 <br><p align="center"><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052398.md#1">中共党庆文艺演出因故罕见提前 网民热议</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052125.md#1">中共官媒发法拉盛红舞视频 拍摄者怒斥歪曲</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053283.md#1">网传视频：中共外交部前老人纵火抗议被抓</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052362.md#1">周晓辉：以江泽民为例 中共高官隐瞒秘密知多少</a><br>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053804.md#1">组图：中共党庆草木皆兵 满街“朝阳群众”</a><br>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053244.md#1">【新闻大家谈】两大新发现 再揭中共掩盖疫情</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053068.md#1">【拍案惊奇】拜登对华政策有变？新毒株Delta更危险</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/18/n13031727.md#1">【独家】内部文件泄中共如何变异宗教</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053804.md#1">组图：中共党庆草木皆兵 满街“朝阳群众”</a><br>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052125.md#1">中共官媒发法拉盛红舞视频 拍摄者怒斥歪曲</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/23/n13043091.md#1">【新闻看点】中国疫苗爆无效 董经纬事件美发话</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13051596.md#1">程晓农：中共的疫苗研制暴露了什么？</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052220.md#1">“清算中共百年反人类罪”纽约法拉盛图片展</a><br>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054125.md#1">【时事纵横】习续约拉拢普京 党庆秀神秘提前?</a><br>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053896.md#1">特斯拉在中国进行大规模召回 遭遇另一道坎</a><br>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052362.md#1">周晓辉：以江泽民为例 中共高官隐瞒秘密知多少</a><br>
+<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054093.md#1">【役情最前线】李家超代理特首当天 黑暴雨示警</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054117.md#1">【远见快评】中共自曝病毒信息 中俄续约藏玄机</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053924.md#1">政法大学教授：为活摘器官 把人当畜生</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053641.md#1">7.1前北京进入最高战备 井盖也安检打封</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053369.md#1">【微视频】AI机器人取代中国人还要多久？</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050836.md#1">吉林六旬残疾老太遭冤判 坐轮椅关进看守所</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/24/n13044485.md#1">大陆上半年逾两百社会精英遭中共迫害</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/11/n13015910.md#1">【思想领袖】图尔克：中共种族灭绝必须制止</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13051398.md#1">梁朝伟庆59岁生日 刘嘉玲晒照秀恩爱</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/24/n13045220.md#1">辽宁营口社保中心主任洪涛等被举报到海外</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13051282.md#1">苹果日报又一主笔冯伟光在机场被拘捕</a><br>
@@ -98,16 +99,15 @@
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/23/n13041837.md#1">黑龙江落马政法委副书记何健民任期内的命案</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/24/n13044176.md#1">台各界声援苹果日报：中共政权处于瓦解起点</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/24/n13043308.md#1">美政府禁止进口部分新疆产太阳能板材料</a><br>
-<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/23/n13041685.md#1">深圳4名法轮功学员被非法关押 境况不明</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://118.160.144.134/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 47,955</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://125.224.84.71/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 47,955</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 379,639,485 人
+!共 379,640,684 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052156.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052210-GettyImages-71755591-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052156.md#1">中共删逾千万份判决书 疑图谋抹去不光彩记录</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051718.md#1">反酷刑日 受害者谈酷刑经历吁彻查大陆人权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050675.md#1">宁夏女医生 法轮功学员陈淑琴遭冤判4年半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050758.md#1">维权律师蔺其磊发文指遭北京司法部门打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049650.md#1">中共威胁扣住疫苗 逼乌克兰退出新疆人权声明</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049634.md#1">【一线采访】宝能发不出工资逼经理辞职</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053896.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13000486-GettyImages-1311107771@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053896.md#1">特斯拉在中国进行大规模召回 遭遇另一道坎</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053425.md#1">孟加拉大砍“一带一路”建造预算 中共恼怒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052645.md#1">中共欲封闭海南岛建自由港 专家揭背后原因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050978.md#1">经济快速恢复美联储转鹰 冲击中国大陆经济</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051684.md#1">中共打压之下 科技公司IPO总额下降近2/3</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051777.md#1">比特币遭中共打压 未来走势如何 业者分析</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13054147.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-463162406-700x420-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13054147.md#1">避免阿拉斯加冲突重演 王毅将视讯参加G20会议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053898.md#1">拜普会后 习近平连线普京宣布中俄条约延期</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053778.md#1">分析：中共百年前夕 大报佛州塌楼转移视线</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053663.md#1">中共百年临近 专家：给全球带来巨大危险</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052835.md#1">流亡医生：党要你去死 你就得去死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052566.md#1">陈用林：中共全面掌控香港为并吞台湾准备</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052973.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052973.md#1">大陆17条河流发生超警以上洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052681.md#1">中国南方多省大暴雨 未来三天南北方均降雨</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051626.md#1">甘肃马拉松官方报告出炉 细节惊人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050585.md#1">武汉突降暴雨 19省市有强对流天气</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050646.md#1">英美澳对疫情三项新发现 条条反击中共甩锅</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049433.md#1">变种病毒载量高发病快 Delta攻入广东</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053245.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053673-hongge-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053245.md#1">大陆红歌比赛被狗闹场 引舆论热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052850.md#1">昔日大陆童星流落街头 捡垃圾桶食物果腹</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052316.md#1">外籍男打中国人引热议 警方2天后才将其行拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052488.md#1">片仔癀每粒涨至上千元 价格暴涨的背后</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052183.md#1">污水倒灌 深圳小区上千住户连喝2个月粪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051612.md#1">黄日华忆亡妻洒泪：宁愿折寿20年换她回来</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051217.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051217.md#1">中共推特色学徒制 破坏学而优则仕传统 伤及全民</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044310.md#1">杭州家长晒百万养娃账单 网民：生不起！</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042742.md#1">洁西卡胃酸倒流声带长茧 被医生劝诫放弃唱歌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042700.md#1">孔子学院侵蚀学术自由 荷兰教育大臣吁取消</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037619.md#1">被传将参加大陆综艺节目 刘德华直接回应</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053924.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053936-24d35eed91be7c0d32deca6489f7645f-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053924.md#1">政法大学教授：为活摘器官 把人当畜生</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052156.md#1">中共删逾千万份判决书 疑图谋抹去不光彩记录</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051718.md#1">反酷刑日 受害者谈酷刑经历吁彻查大陆人权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050675.md#1">宁夏女医生 法轮功学员陈淑琴遭冤判4年半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050758.md#1">维权律师蔺其磊发文指遭北京司法部门打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049650.md#1">中共威胁扣住疫苗 逼乌克兰退出新疆人权声明</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053425.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928064-GettyImages-1203830481-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053425.md#1">孟加拉大砍“一带一路”建造预算 中共恼怒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052645.md#1">中共欲封闭海南岛建自由港 专家揭背后原因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050978.md#1">经济快速恢复美联储转鹰 冲击中国大陆经济</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051684.md#1">中共打压之下 科技公司IPO总额下降近2/3</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051777.md#1">比特币遭中共打压 未来走势如何 业者分析</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051240.md#1">新研究：疫情造成美国人平均减寿一年</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13054147.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-463162406-700x420-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13054147.md#1">避免阿拉斯加冲突重演 王毅将视讯参加G20会议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053898.md#1">拜普会后 习近平连线普京宣布中俄条约延期</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053778.md#1">分析：中共百年前夕 大报佛州塌楼转移视线</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053663.md#1">中共百年临近 专家：给全球带来巨大危险</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052835.md#1">流亡医生：党要你去死 你就得去死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052566.md#1">陈用林：中共全面掌控香港为并吞台湾准备</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052973.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052973.md#1">大陆17条河流发生超警以上洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052681.md#1">中国南方多省大暴雨 未来三天南北方均降雨</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051626.md#1">甘肃马拉松官方报告出炉 细节惊人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050585.md#1">武汉突降暴雨 19省市有强对流天气</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049433.md#1">变种病毒载量高发病快 Delta攻入广东</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049298.md#1">局部洪水75年一遇 黑龙江多处将现超级洪峰</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053245.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053673-hongge-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053245.md#1">大陆红歌比赛被狗闹场 引舆论热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052850.md#1">昔日大陆童星流落街头 捡垃圾桶食物果腹</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052316.md#1">外籍男打中国人引热议 警方2天后才将其行拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052488.md#1">片仔癀每粒涨至上千元 价格暴涨的背后</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052183.md#1">污水倒灌 深圳小区上千住户连喝2个月粪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051612.md#1">黄日华忆亡妻洒泪：宁愿折寿20年换她回来</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051217.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051217.md#1">中共推特色学徒制 破坏学而优则仕传统 伤及全民</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044310.md#1">杭州家长晒百万养娃账单 网民：生不起！</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042742.md#1">洁西卡胃酸倒流声带长茧 被医生劝诫放弃唱歌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042700.md#1">孔子学院侵蚀学术自由 荷兰教育大臣吁取消</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037619.md#1">被传将参加大陆综艺节目 刘德华直接回应</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/10/n13014000.md#1">【独家】法治还是人治？ 文件曝中共谎言</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/8/n13008518.md#1">【独家】中共用“学习”洗脑 民众无声抵抗</a><br>
 <a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/3/n12997170.md#1">【独家】全民遭谎言洗脑 有多少真正跟随</a><br>
